style.css
/* ... */
/* Scrollbar Styling */
/* Customizes the whole scrollbar */
::-webkit-scrollbar {
    width: 10px; 
    height: 10px; 
}

@media (max-width: 1439px) {
    ::-webkit-scrollbar {
        width: 0.694vw; 
        height: 0.694vw; 
    }
}

@media (max-width: 865px) {
    ::-webkit-scrollbar {
        display: none;
    }
}
  
/* Customizes the scrollbar track */
::-webkit-scrollbar-track {
    background: #2e2e2e; 
}
  
/* Customizes the scrollbar thumb (the draggable part) */
::-webkit-scrollbar-thumb {
    background: #555; 
    border-radius: 25px; 
}

@media (max-width: 1439px) {
    ::-webkit-scrollbar-thumb {
        border-radius: 1.736vw; 
    }
}


  
/* Customizes the scrollbar thumb on hover */
::-webkit-scrollbar-thumb:hover {
    background: #888; 
}
  
/* Firefox */
body {
    scrollbar-width: thin; 
    scrollbar-color: #555 #2e2e2e; 
}

body {
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
    background-color: var(--black-color);
}

html {
    scroll-behavior: smooth;
}

.img-label {
    font-family: 'AbhayaLibre-Regular';
    font-size: 18px;
    color: var(--white-color);
    line-height: 1;
}

@media (max-width: 1439px) {
    .img-label {
        font-size: 1.25vw;
    }
}

/* LANDING SECTION */
.landing {
    width: 1240px;
    padding-top: 100px;
    padding-left: 100px;
    padding-right: 100px;
}

@media (min-width: 1441px) {
    .landing {
        padding-top: 70px; 
    }
}

@media (max-width: 1439px) {
    .landing {
        width: 86.111vw;
        padding-top: 6.944vw;
        padding-left: 6.944vw;
        padding-right: 6.944vw;
    }
}

.landing-container {
    display: flex;
    align-items: stretch;
    justify-content: space-between;
    gap: 50px;
}

@media (max-width: 1439px) {
    .landing-container {
        gap: 3.472vw;
    }
}

.landing-container img {
    width: 540px;
    height: 800px;
    object-fit: cover;
    border-radius: 20px;
}

@media (max-width: 1439px) {
    .landing-container img {
        width: 37.5vw;
        height: 55.556vw;
    }
}

.landing-body {
    flex-grow: 1;
    display: flex;
    flex-direction: column;
    justify-content: space-between;
    align-items: stretch;
}

.landing-body .header p {
    font-family: 'Brown-Sugar';
    font-size: 96px;
    color: var(--white-color);
    margin: 0;
    line-height: 1;
}

@media (max-width: 1439px) {
    .landing-body .header p {
        font-size: 6.667vw;
    }
}

.landing-body .footer {
    display: flex;
    justify-content: space-between;
    align-items: center;
}

.landing-body .footer .footer-text p {
    font-family: 'AbhayaLibre-Regular';
    font-size: 36px;
    color: var(--white-color);
    margin: 0;
    line-height: 1;
}

@media (max-width: 1439px) {
    .landing-body .footer .footer-text p {
        font-size: 2.5vw;
    }
}

.landing-body .footer .footer-text .Designation {
    font-family: 'AbhayaLibre-Regular';
    font-size: 28px;
    color: var(--white-color);
}

@media (max-width: 1439px) {
    .landing-body .footer .footer-text .Designation {
        font-size: 1.944vw;
    }
}

.landing-body .footer .work-with-me-btn {
    display: flex;
    justify-content: center;
    align-items: center;
    width: 200px;
    height: 50px;
    background-color: var(--white-color);
    border-radius: 25px;
}

@media (max-width: 1439px) {
    .landing-body .footer .work-with-me-btn {
        width: 13.889vw;
        height: 3.472vw;
        border-radius: 1.736vw;
    }
}

.landing-body .footer .work-with-me-btn a {
    display: block; 
    width: 100%; 
    height: 100%; 
    font-family: 'OpenSauceSans-Bold';
    font-size: 18px;
    text-align: center; 
    text-decoration: none;
    color: var(--black-color);
    margin: 0;
    line-height: 50px; 
}

@media (max-width: 1439px) {
    .landing-body .footer .work-with-me-btn a {
        font-size: 1.25vw;
        line-height: 3.472vw;
    }
}

/* ABOUT ME SECTION */
.about-me {
    width: 1240px;
    max-width: 1440px;
    padding-top: 80px;
    padding-left: 100px;
    padding-right: 100px;
}

@media (max-width: 1439px) {
    .about-me {
        width: 86.111vw;
        padding-top: 5.556vw;
        padding-left: 6.944vw;
        padding-right: 6.944vw;
    }
}

.about-me-container {
    width: 100%;
    display: flex;
    align-items: stretch;
    justify-content: space-between;
    gap: 50px;
}

@media (max-width: 1439px) {
    .about-me-container {
        gap: 3.472vw;
    }
}

.about-me-container img {
    width: 540px;
    height: 600px;
    object-fit: cover;
    border-radius: 20px;
    flex-shrink: 0;
}

@media (max-width: 1439px) {
    .about-me-container img {
        width: 37.5vw;
        height: 41.667vw;
    }
}

.about-me-text {
    flex-grow: 1;
    display: flex;
    flex-direction: column;
    justify-content: flex-start;
    align-items: stretch;
    gap: 25px;
}

@media (max-width: 1439px) {
    .about-me-text {
        gap: 1.736vw;
    }
}

.about-me-text .header {
    width: 100%;
    display: flex;
    justify-content: flex-start;
    align-content: flex-start;
}

.about-me-text .body {
    width: 100%;
    display: flex;
    justify-content: flex-end;
    align-content: flex-end;
}

.about-me-text .header p {
    font-family: 'Brown-Sugar';
    font-size: 96px;
    color: var(--white-color);
    margin: 0;
    line-height: 1;
}

@media (max-width: 1439px) {
    .about-me-text .header p {
        font-size: 6.667vw;
    }
}

.about-me-text .body p {
    font-family: 'AbhayaLibre-Regular';
    font-size: 24px;
    color: var(--white-color);
    margin: 0;
    line-height: 1;
}

@media (max-width: 1439px) {
    .about-me-text .body p {
        font-size: 1.667vw;
    }
}
/* ... */

